# base64codec

./: .gitignore  CMakeLists.txt  build.bat  build.sh  env.bat  template_env.bat
build_mingw_release/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw_release/src/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  main.cpp
